# 100pac-chatbot

./: .env.example  .gitignore  README.md  bootstrap.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  docker-publish.yml
.readme-assets/: load-and-plot-arco-era5-from-gcp.ipynb
backend/: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/scripts/: api  build-docker-image  build-index  chat  format  ingest-data  install  test  validate
backend/src/chatbot/: llm.py  paths.py  validate.py
backend/src/chatbot/agent/: agent.py  state.py
backend/src/chatbot/api/: app.py
backend/src/chatbot/api/schemas/: chat.py
backend/src/chatbot/chat/: .streamlit.toml  app.py
backend/src/chatbot/data/: __init__.py  access.py  analytics.py  ingest.py  metadata.py
backend/src/chatbot/rag/: __init__.py  extract.py  figures.py  index.py
backend/src/chatbot/settings/: __init__.py
backend/src/chatbot/tools/: analyze.py  cat.py  data.py  report.py
backend/tests/: conftest.py  test_analytics.py  test_analyze_tool.py  test_figures.py  test_health.py  test_ingest.py  test_metadata.py
deploy/traefik/: 100pac.mathot.org.yml
docs/: data-model.md  deploy-nas.md  devlog.md  rag-explained.md  stp-prepare-un-plan-sequential-brook.md  validation.md
helm/: README.md
helm/chatbot/: Chart.yaml  example.values.yaml
helm/chatbot/templates/: deployment.yaml  ingress.yaml  pvc.yaml  secrets.yaml  services.yaml
helm/scripts/: diff  upgrade
